--- a/frontend/src/components/control.css
+++ b/frontend/src/components/control.css
@@ -4,7 +4,7 @@
 }
 
 #header {
-  height: 7em;
+  height: 12vh;
   background-image: linear-gradient(
     rgba(206, 181, 167, 1),
     rgba(206, 181, 167, 0)
@@ -13,7 +13,7 @@
 }
 
 #footer {
-  height: 7em;
+  height: 12vh;
   background-image: linear-gradient(
     rgba(206, 181, 167, 0),
     rgba(206, 181, 167, 1)
