--- a/frontend/src/components/control.css
+++ b/frontend/src/components/control.css
@@ -5,19 +5,25 @@
 
 #header {
   height: 12vh;
+  position: fixed;
+  width: 100%;
   background-image: linear-gradient(
     rgba(206, 181, 167, 1),
     rgba(206, 181, 167, 0)
   );
-  
+  z-index: 2000;
 }
 
 #footer {
   height: 12vh;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   background-image: linear-gradient(
     rgba(206, 181, 167, 0),
     rgba(206, 181, 167, 1)
   );
+  z-index: 2000;
   margin-top: auto;
   display: flex;
   align-items: center;
