--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -12,28 +12,55 @@ body{
 }
 
 #loginCanvas {
-  position: fixed;
+  /* position: fixed; */
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
   height: 75vh;
   width: 75vw;
   border-radius: 5px;
   background: rgba(206, 181, 167, 1);
   font-size: larger;
+  /* text-align: center; */
 }
 
-#name {
+#loginPage #name {
   position: relative;
-  display: inline-block;
-  top: -30%;
+  /* display: inline-block; */
   font-family: 'Josefin Sans', sans-serif;
   font-size: large;
+  top: 2vh;
+  height: fit-content;
 }
 
-#uni {
+#loginPage #uni {
   color: rgba(4, 104, 101, 1);
   float: left;
 }
 
-#go {
+#loginPage #go {
   color: rgba(60, 55, 68, 1);
   float: left;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  /* align-items: center; */
+  top: 5vh;
+  width:80%;
+  height: min-content;
+}
+
+input[type="submit"] {
+  background-color: transparent;
+  border: none;
+  text-decoration: underline;
+  font-family: 'Raleway', sans-serif;
+  color:rgba(60, 55, 68, 1);
+  font-size: large;
+  margin-top: 5vh;
 }
