--- a/frontend/src/components/filledContent.css
+++ b/frontend/src/components/filledContent.css
@@ -1,13 +1,48 @@
 #filledContentHeight {
   display: flex;
-  height: 76vh;
+  height: 100vh;
   align-items: center;
   justify-content: center;
 }
 
 #filledContentBackground {
+  display: flex;
   background-color: rgba(206, 181, 167, 1);
   border-radius: 5px;
-  height: 70vh;
-  width: 75vw;
+  height: 65vh;
+  width: 80vw;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+#designTitle {
+  position: relative;
+  height: 5%;
+}
+
+#designCanvas {
+  height: 60%;
+  width: 85%;
+  border-radius: 5px;
+  background-color: #D9D9D9;
+}
+
+#editButtons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
+  height: 30%;
+  height:min-content;
+}
+
+.editButton {
+  background-color: rgba(60, 55, 68, 1);
+  color: #D9D9D9;
+  border-radius: 5px;
+  font-family: 'Raleway', sans-serif;
+  width: 70%;
 }
