--- a/frontend/src/pages/config.css
+++ b/frontend/src/pages/config.css
@@ -17,7 +17,7 @@
 }
 
 .configButton {
-  display: table;
+  display: flex;
   background-color: rgba(206, 181, 167, 1);
   width: 100%;
   height: 15%;
@@ -27,9 +27,18 @@
   border-radius: 5px;
   border: 0;
   text-decoration: none;
-  text-align: center;
-  vertical-align: middle;
+  align-items: center;
+  justify-content: center;
 }
+
+#configButtonSesion {
+  color: rgba(192, 19, 19, 1);
+}
+
+/* .configButtonText {
+  margin-top: 0%;
+  margin-bottom: 0%;
+} */
 
 
 
