--- a/frontend/src/components/designContent.css
+++ b/frontend/src/components/designContent.css
@@ -10,3 +10,23 @@
   width: 80vw;
   overflow: auto;
 }
+
+#createFirstDesign {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#createFirstDesign img {
+  height: 8em;
+  width: 8em;
+}
+
+#createFirstDesign p {
+  color: rgba(60, 55, 68, 1);
+  font-size: large;
+}
+
+#designContentHeight a {
+  text-decoration: none;
+}
