--- a/frontend/src/components/filledContent.css
+++ b/frontend/src/components/filledContent.css
@@ -21,11 +21,51 @@
   height: 5%;
 }
 
+#titleInput {
+  margin-top: 10%;
+  margin-bottom: 10%;
+  width: 85%;
+  height: 5%;
+  border-bottom: 0px;
+}
+
+#titleInput {
+  font-family: 'Raleway', sans-serif;
+  color: rgba(60, 55, 68, 1);
+  text-align: center;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+#titleInput::placeholder {
+  font-family: 'Raleway', sans-serif;
+  color: rgba(60, 55, 68, 1);
+  text-align: center;
+  font-size: x-large;
+  font-weight: bold;
+}
+
 #designCanvas {
+  position: relative;
   height: 60%;
   width: 85%;
   border-radius: 5px;
   background-color: #D9D9D9;
+}
+
+#clothImg {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+#imageImg {
+  position: absolute;
+  width: 20%;
+  height: 20%;
+  left: 50%;
+  top: 50%;
 }
 
 #editButtons {
@@ -35,7 +75,7 @@
   flex-wrap: wrap;
   flex-direction: column;
   width: 100%;
-  height: 30%;
+  height: 50%;
   height:min-content;
 }
 
@@ -45,4 +85,11 @@
   border-radius: 5px;
   font-family: 'Raleway', sans-serif;
   width: 70%;
+  text-decoration: none;
+  text-align: center;
+}
+
+.editButton p {
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
