--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -89,11 +89,18 @@
 }
 
 .homeLinks{
-  margin-top: 4vh;
+  display: flex;
+  margin-top: 7vh;
   width: 100%;
   height: 10vh;
+  flex-direction: column;
 }
 
+.homeLinks a{
+  margin-top: 2.5vh;
+  margin-bottom: 2.5vh;
+  text-decoration: none;
+}
 /* #imgContainer {
   position: relative;
   
