--- a/frontend/src/components/filledContent.css
+++ b/frontend/src/components/filledContent.css
@@ -12,7 +12,8 @@
   height: 65vh;
   width: 80vw;
   align-items: center;
-  flex-wrap: wrap;
+  /* justify-content: center; */
+  /* flex-wrap: wrap; */
   flex-direction: column;
 }
 
@@ -22,11 +23,12 @@
 }
 
 #titleInput {
-  margin-top: 10%;
-  margin-bottom: 10%;
+  margin-top: 7%;
+  margin-bottom: 7%;
   width: 85%;
   height: 5%;
   border-bottom: 0px;
+  text-decoration: underline;
 }
 
 #titleInput {
@@ -51,6 +53,7 @@
   width: 85%;
   border-radius: 5px;
   background-color: #D9D9D9;
+  overflow: hidden;
 }
 
 #clothImg {
@@ -62,21 +65,22 @@
 
 #imageImg {
   position: absolute;
-  width: 20%;
   height: 20%;
-  left: 50%;
-  top: 50%;
+  left: 0%;
+  top: 0%;
 }
 
 #editButtons {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
   flex-direction: column;
   width: 100%;
-  height: 50%;
-  height:min-content;
+  height: 30%;
+}
+
+#editButtons form{
+  top: 0%;
 }
 
 .editButton {
@@ -87,9 +91,34 @@
   width: 70%;
   text-decoration: none;
   text-align: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 .editButton p {
   margin-top: 2px;
   margin-bottom: 2px;
+}
+
+#formContainer {
+  display: flex;
+  
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.designFormControl {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color:rgba(60, 55, 68, 1);
+  border: 0px;
+  border-radius: 2px;
+  width: 33%;
+}
+
+.designFormControl input{
+  border: 0px;
+  border-radius: 2px;
+  width: 80%;
 }
