--- a/frontend/src/components/userContent.css
+++ b/frontend/src/components/userContent.css
@@ -8,7 +8,95 @@
 #userContentBackground {
   height: 65vh;
   width: 80vw;
-  overflow: auto;
   background-color: rgba(206, 181, 167, 1);
   border-radius: 5px;
+  justify-content: center;
+  position: relative;
 }
+
+#userData {
+  display: flex;
+  flex-direction: column;
+  height: 60%;
+  justify-content: space-around;
+}
+
+
+.userAttribute {
+  margin-left: 1.5em;
+  color: rgba(60, 55, 68, 1);
+}
+
+.userAttribute label {
+  font-size: large;
+  margin-left: 0.1em;
+}
+
+.userAttribute input {
+  font-size: large;
+}
+
+.userAttribute h3{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.userLabel {
+  font-weight: 400;
+}
+
+#username {
+  font-weight: 700;
+  font-size: x-large;
+  align-self: center;
+  width: min-content;
+  text-align: center;
+  background-color: rgba(206, 181, 167, 1);
+  margin-top: 0.8em;
+  margin-bottom: 0.8em;
+}
+
+#userButtons {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  bottom: 3%;
+}
+
+.userButton {
+  background-color: rgba(60, 55, 68, 1);
+  color: #D9D9D9;
+  border-radius: 5px;
+  border: 0px;
+  font-family: 'Raleway', sans-serif;
+  width: 65%;
+  height: 1.75em;
+  text-decoration: none;
+  text-align: center;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+#userData input{
+  border-bottom: 0px;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+#userContentBackground form{
+  height: 100%;
+  width: 100%;
+  top: 0%;
+} 
+
+#userFormContainer{
+  height: 100%;
+}
+
+
+/* #userButtons {
+  height: 30%;
+} */
