--- a/frontend/src/components/designComponent.css
+++ b/frontend/src/components/designComponent.css
@@ -12,10 +12,17 @@
 }
 
 #imgBackground {
+  display: flex;
   background-color: #D9D9D9;
   height: 75%;
   width: 90%;
   border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+}
+
+#imgBackground img {
+  height: 75%;
 }
 
 #componentText {
