--- a/frontend/src/pages/config.css
+++ b/frontend/src/pages/config.css
@@ -8,19 +8,19 @@
 #configButtons {
   display: flex;
   border-radius: 5px;
-  height: 60vh;
+  height: 30%;
   width: 80vw;
   align-items: center;
   flex-wrap: wrap;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .configButton {
   display: flex;
   background-color: rgba(206, 181, 167, 1);
   width: 100%;
-  height: 15%;
+  height: 3em;
   font-family: 'Raleway', sans-serif;
   color: rgba(60, 55, 68, 1);
   font-size: x-large;
